<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvMascota"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    app:cardCornerRadius="@dimen/cardview_radius">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imvMascota"
            android:contentDescription="@string/mascota_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/garfield"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/contorno">
            <ImageButton
                android:id="@+id/imgBone1"
                android:contentDescription="@string/bone2_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bone_white"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:id="@+id/tvMascotaNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pnombre"
                android:textSize="@dimen/txt_mascota_size"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/imgBone1"
                android:layout_toRightOf="@id/imgBone1"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
            <TextView
                android:id="@+id/tvMascotaLikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plikes"
                android:textSize="@dimen/txt_mascota_size"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/imgBone2"
                android:layout_toLeftOf="@id/imgBone2"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
            <ImageView
                android:id="@+id/imgBone2"
                android:contentDescription="@string/bone2_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bone_yellow"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>